[package]
name = "giralnet"
version = "0.0.1"
edition = "2024"

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
aes-gcm = "0.10.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
fast-socks5 = "0.10.0"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
webpki = "0.22"
toml = "0.8"
dialoguer = "0.11"
colored = "2.0"